# bridal-shower-webapp

./: .env  .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
backend/: .env.example  pyproject.toml  pyvenv.cfg  requirements.txt
backend/Scripts/: activate  activate.bat
backend/src/core/: settings.py  urls.py
backend/src/people/: admin.py
backend/src/people/migrations/: 0001_inital_schema.py
backend/src/products/: admin.py  models.py  urls.py  views.py
backend/src/products/migrations/: 0003_isolating_section.py
backend/src/reservations/: admin.py  models.py
backend/src/reservations/migrations/: 0002_reservation_quantity.py
src/: db.sqlite3
src/core/settings/: base.py  heroku.py
src/people/: admin.py  models.py
src/products/: admin.py  models.py  serializers.py  urls.py  views.py
src/products/migrations/: 0001_initial_schema.py  0002_isolating_tables.py  0004_changing_logical_process.py  0005_adding_s3_storage.py
src/reservations/: models.py  serializers.py
src/reservations/migrations/: 0001_inital_schema.py  0003_add_reservation_status.py
src/utils/: __init__.py
